# slack

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  TODO.md  chat.cpp  chat.h  input.cpp  input.h  main.cpp  ncursesTODO.md  roster.cpp  roster.h  slack.kdev4  slackclient.cpp  slackclient.h  slackpp.pro  slackui.cpp  slackui.h  slackui.ui
Arch/: PKGBUILD  slack++.install  slack.desktop
cmake/: CURLppConfig.cmake  FindJsoncpp.cmake  FindLibnotify.cmake  FindNcursesw.cmake
include/: Chat.hpp  Headers.hpp  Input.hpp  Log.h  Log.hpp  MyWindow.hpp  Roster.hpp  Session.hpp  SlackClient.hpp  SlackUI.hpp  WebsocketClient.hpp  Websockets.hpp  Window.hpp
src/: Chat.cpp  Input.cpp  MyWindow.cpp  Roster.cpp  Session.cpp  SlackClient.cpp  SlackUI.cpp  Window.cpp
